# tensor-network-simulators

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: run_tebd.ipynb
examples/mpdo/: basic_simulation.py  noise_simulation.ipynb  print_data.py
examples/mps_mpo/: run_dmrg.ipynb  run_tebd.ipynb
src/: __init__.py  hamiltonian.py  mps.py
src/mpdo/: __init__.py  canonical.py  gates.py  noise.py  simulator.py
src/mps_mpo/: __init__.py  dmrg.py  hamiltonian.py  mps.py  observables.py  solver.py  tebd.py  utils.py
