[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tebd-spin-chain"
version = "0.1.0"
description = "TEBD implementation for real-time dynamics of 1D spin chains"
authors = [
    { name = "Chayan Kr. Mandal", email = "ckm.radhanagar@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.22",
    "scipy>=1.8",
    "matplotlib>=3.5",
]

[tool.setuptools.packages.find]
where = ["src"]